added more words

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
 <body>
   <!-- Place your site's HTML here -->
-  <p>This text will display on your site! Jan 19</p>
+<p>HEllO world this is my first webpage
+</p>
+<p>Keon Dunn first webpage</p>
+<p>avatar is my favorite movie</p>
+<p>Lets design some pages</p>
+
   <script src="js/main.js"></script>
 </body>
 
