--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <p>Keon Dunn first webpage</p>
 <p>avatar is my favorite movie</p>
 <p>Lets design some pages</p>
-
+  <P>The world is <strong> bold word </strong></P>
   <script src="js/main.js"></script>
 </body>
 
