UPDATE TO TUESDAY

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <p>avatar is my favorite movie</p>
 <p>Lets design some pages</p>
   <P>The world is <strong> bold word </strong></P>
+  <p>Starfield drops <strong>TodAY</strong></p>
+
   <script src="js/main.js"></script>
 </body>
 
