--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <p>Lets design some pages</p>
   <P>The world is <strong> bold word </strong></P>
   <p>Starfield drops <strong>TodAY</strong></p>
-
+ <img src="./img/227450d75d27d428415edafcf3ea89d9.jpeg" alt="">
   <script src="js/main.js"></script>
 </body>
 
