add second picture

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <P>The world is <strong> bold word </strong></P>
   <p>Starfield drops <strong>TodAY</strong></p>
  <img src="./img/227450d75d27d428415edafcf3ea89d9.jpeg" alt="">
+ <img src="./img/b08bd84149a1a3937123e4ea536addc1.jpeg" alt="">
   <script src="js/main.js"></script>
 </body>
 
